--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Personal Notes</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <script defer="defer" src="./static/js/main.ef34f879.js"></script>
     <link href="./static/css/main.e67009b0.css" rel="stylesheet" />
   </head>
